# jira-database-etl

./: .env  .gitignore  README.md  pyproject.toml
jira_database_etl/: __init__.py  db.py  jirafetch.py  transform.py
myenv/: pyvenv.cfg
