[tool.poetry]
name = "jira-database-etl"
version = "1.0.0"
description = "version inical etl"
authors = ["gustavo"]
readme = "README.md"
packages = [{ include = "jira_database_etl" }]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
numpy = "1.26.4"
pandas = "2.2.0"
pymysql = "^1.1.2"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.2.1"
pytz = "^2025.2"
requests = "^2.32.5"
six = "^1.17.0"
sqlalchemy = "2.0.25"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
